# DuckSchema

./: .gitignore  README.md  compile.bat  main.py  onefile.bat  package.config.yml  pyproject.toml
diskrecuperar/: __main__.py
diskrecuperar/api/diskapi/: api.py
diskrecuperar/api/manager/: response.py
diskrecuperar/app/components/button/: page.py  widget.py
diskrecuperar/app/components/card/: widget.py
diskrecuperar/app/components/combobox/: widget.py
diskrecuperar/app/components/grip/: widget.py
diskrecuperar/app/components/icon/: widget.py
diskrecuperar/app/components/input/: widget.py
diskrecuperar/app/components/label/: widget.py
diskrecuperar/app/components/listview/: widget.py
diskrecuperar/app/components/message/: __init__.py  popup.py  widget.py
diskrecuperar/app/components/tooltip/: widget.py
diskrecuperar/app/components/window/: __init__.py  widget.py
diskrecuperar/app/window/stack/: manager.py
diskrecuperar/database/common/: baseModel.py
diskrecuperar/database/config/: __init__.py  conn.py
diskrecuperar/database/model/client/: authModel.py
diskrecuperar/static/css/styles/: listview.qss  progress.qss  style.css  widget.qss
diskrecuperar/static/json/: searching.json
diskrecuperar/utils/manager/: css.py  download.py  font.py  image.py  path.py
diskrecuperar/utils/password/: provider.py
duckschema/: __init__.py  __main__.py
duckschema/api/diskapi/: api.py
duckschema/app/components/button/: page.py  widget.py
duckschema/app/components/card/: widget.py
duckschema/app/components/combobox/: widget.py
duckschema/app/components/icon/: widget.py
duckschema/app/components/input/: widget.py
duckschema/app/components/label/: widget.py
duckschema/app/components/listview/: widget.py
duckschema/app/components/message/: popup.py  widget.py
duckschema/app/components/tooltip/: widget.py
duckschema/app/components/window/: widget.py
duckschema/app/window/stack/: manager.py
duckschema/database/common/: baseModel.py
duckschema/database/model/client/: __init__.py  authModel.py
duckschema/static/css/theme/: dark.css  light.css
duckschema/static/json/: not_found_search.json  not_found_search_without_background.json
duckschema/utils/encrypt/: provider.py
duckschema/utils/manager/: css.py  debouce.py  download.py  extensions.py  font.py  image.py  money.py  pagination.py  path.py
src/app/: __init__.py
src/app/components/button/: page.py  widget.py
src/app/components/combobox/: widget.py
src/app/components/grip/: widget.py
src/app/components/icon/: widget.py
src/app/components/input/: widget.py
src/app/components/label/: widget.py
src/database/common/: baseModel.py
src/database/config/: conn.py
src/utils/manager/: css.py  font.py  image.py  path.py
(+35 files in other folders)
