[tool.poetry]
name = "diskrecuperar"
version = "0.1.0"
description = "Diskrecuperar"
authors = ["weslenpy <weslenjhony@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyqt6 = "^6.8.1"
bcrypt = "^4.3.0"
sqlalchemy = "^2.0.40"
httpx = "^0.28.1"
marshmallow-sqlalchemy = "^1.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.11.2"

[tool.ruff]
line-length = 79
extend-exclude = [
    'migrations',
    ".git",
    ".idea",
    ".mypy_cache",
    ".tox",
    ".venv"
]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'python main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=app -vv'
post_test = 'coverage html'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
