[project]
name = "diskrecuperar"
version = "0.1.0"
description = "Diskrecuperar"
authors = [
 {name = "weslenpy", email = "weslenjhony@gmail.com"}
]
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.9, <=3.11"

dependencies = [
    "bcrypt (>=4.3.0)",
    "sqlalchemy (>=2.0.40)",
    "httpx (>=0.28.1)",
    "marshmallow-sqlalchemy (>=1.4.1)",
    "briefcase (>=0.3.22)",
    "pyside6[webengine] (>=6.9.0,<7.0.0)",
    "cryptography (==43.0.0)",
    "pyqt6-webengine (>=6.9.0,<7.0.0)",
    "nuitka (==2.6.9)",

]




[tool.briefcase]
project_name="Banco de Arquivos"
bundle = "com.bancodearquivos"


[tool.briefcase.app.src]
description="Banco de arquivos"
long_description = "Sistema de arquivos, para download"
sources =["src"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.11.2"
nuitka = "^2.6.9"

[tool.ruff]
line-length = 79
extend-exclude = [
    'migrations',
    ".git",
    ".idea",
    ".mypy_cache",
    ".tox",
    ".venv"
]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'python main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=app -vv'
post_test = 'coverage html'
compile = "compile.bat"
onefile = "onefile.bat"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
